--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="text">
             <h1>Dont't Have an account?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam amet aperiam suscipit natus sint in consectetur, minima aspernatur neque magni </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam amet aperiam suscipit natus sint in
+                consectetur, minima aspernatur neque magni </p>
             <button id="btn-up">SIGN UP</button>
         </div>
         <div class="text">
             <h1>Have an account?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam amet aperiam suscipit natus sint in consectetur, minima aspernatur neque magni </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam amet aperiam suscipit natus sint in
+                consectetur, minima aspernatur neque magni </p>
             <button id="btn-in">SIGN IN</button>
         </div>
     </div>
@@ -26,21 +30,22 @@
             <input type="text" placeholder="Name">
             <input type="text" placeholder="Email">
             <input type="text" placeholder="Password">
-         
-            <button >SIGNUP</button>
+
+            <button>SIGNUP</button>
         </form>
     </div>
 
-   <div class="signin" id="signin">
-    <form class="form2">
-        <label>SIGN IN</label>
-        
-        <input type="text" placeholder="Email">
-        <input type="text" placeholder="Password">
-        <a href="#">Forget Password ?</a>
-        <button >SIGNIN</button>
-    </form>
+    <div class="signin" id="signin">
+        <form class="form2">
+            <label>SIGN IN</label>
+
+            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Password">
+            <a href="#">Forget Password ?</a>
+            <button>SIGNIN</button>
+        </form>
     </div>
     <script src="./main.js"></script>
 </body>
+
 </html>
